<resources>
    <string name="app_name">EPF</string>
    <string name="my_name">Choong Hon Guan</string>
    <string name="show_button">Show</string>
    <string name="hide_button">Hide</string>
    <string name="toggleQrText">Show</string>

    <!-- LAB 3-->
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smoker">I am a smoker</string>
    <string name="premium">Premium</string>
    <string name="extra_premium">Extra Premium</string>
    <string name="total">Total</string>
    <string-array name="age_group">
        <item>Less than 17</item>
        <item>17 to 25</item>
        <item>26 to 30</item>
        <item>31 to 40</item>
        <item>41 to 55</item>
        <item>More than 55</item>
    </string-array>
    <string name="title_activity_main_lab4">MainActivityLab4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- LAB 4-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="menu_dividend">Dividend</string>
    <string name="menu_investment">Investment</string>

    <string name="slogan" translatable="false">Safeguarding Your Future</string>
    <string name="logo" translatable="false">EPF Logo</string>
    <string name="aim" translatable="false">Realising returns and enabling better access to your accounts</string>
    <string name="dividend_2022" translatable="false">Dividend 2022</string>
    <string name="dividend_message" translatable="false">For all your contributions, the government guarantees a minimum paid dividend rate of 2.50% for Simpanan Konvensional.</string>
    <string name="investment_message" translatable="false">The investment of EPF are guided by its Strategic Asset Allocation (SAA) to optimise return within the funds risk tolerance limits and ensures that the strategic investment targets of EPF are met.</string>
    <string name="investment_heading" translatable="false">Invest a portion of your savings your way</string>
    <!--string name="dividend_2022_link">https://www.kwsp.gov.my/en/dividend</string-->
    <string name="year" translatable="false">Year</string>
    <string name="shariah" translatable="false">Shariah\n(Per Annum)</string>
    <string name="conventional" translatable="false">Conventional\n(Per Annum)</string>
    <string name="dob" translatable="false">Date of Birth</string>
    <string name="balance_account1" translatable="false">Balance in Account 1</string>
    <string name="investment_amount" translatable="false">Amount of Investment</string>
    <string name="calculate" translatable="false">Calculate</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="age" translatable="false">Age</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="version" translatable="false">Version</string>
    <string name="about_message" translatable="false">EPF helps you achieve a better future by safeguarding your retirement savings and delivering excellent services.</string>
    <string name="copy_right" translatable="false">Copy Right \u00A9 2023</string>
    <string name="service_question" translatable="false">How we may assist you?</string>
    <string name="operating_hour" translatable="false">Operating Hours: Mon - Fri 8.30 am to 4.3- om</string>
    <string name="locate_us" translatable="false">Locate Us</string>
    <string name="visit_us" translatable="false">Visit Us at www.kwsp.gov.my</string>
    <string name="exit_message" translatable="false">Are you sure you want to exit?</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="shared_pref" translatable="false">com.trexworkshop.helloskt.ui.profile</string>
    <string name="name" translatable="false">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="save" translatable="false">Save</string>
</resources>