<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.trexworkshop.helloskt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_dividend"
            app:destination="@id/nav_dividend"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_home_to_nav_investment"
            app:destination="@id/nav_investment"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.trexworkshop.helloskt.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.trexworkshop.helloskt.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_dividend"
        android:name="com.trexworkshop.helloskt.ui.dividend.DividendFragment"
        android:label="@string/menu_dividend"
        tools:layout="@layout/fragment_dividend2" />

    <fragment
        android:id="@+id/nav_investment"
        android:name="com.trexworkshop.helloskt.ui.investment.InvestmentFragment"
        android:label="@string/menu_investment"
        tools:layout="@layout/fragment_investment" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.trexworkshop.helloskt.ui.about.AboutFragment"
        android:label="@string/action_about" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.trexworkshop.helloskt.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>